Add new engage part (moto armonico)

--- a/moto_armonico/lezione_moto_armonico.tex
+++ b/moto_armonico/lezione_moto_armonico.tex
@@ -4,6 +4,8 @@
 % Per i link nell'indice
 \usepackage{hyperref}
 \usepackage{cite}
+\usepackage{graphicx}
+\graphicspath{ {./images/} }
 
 \title{Lezioni sul Moto Armonico}
 \author{Matteo Savatteri}
@@ -23,31 +25,29 @@ Questo metodo di natura inquiry prevede cinque fasi:
 \emph{Explain}, \emph{Extend}, \emph{Evaluate}.
 
 \section{Engage}
-In questa fase occorre suscitare la curiosità dello
-studente e far scaturire in lui delle domande.
-A tal fine la classe viene portata in laboratorio,
-dove vengono mostrati alcuni interessanti moti
-oscillatori. Ecco alcuni esempi: 
-\begin{itemize}
-\item Pendolo;
-\item Altalena avente come perno un prisma;
-\item Altalena avente come perno un parallelepipedo;
-\item Oscillatore massa-molla;
-\item Pallina di gomma che rimbalza;
-\item Sferetta di metallo che scorre su di una rotaia
-parabolica, cicloidale o di Galileo.
-\end{itemize}
+Per far scoprire ai ragazzi l'esistenza del moto armonico e
+la sua descrizione, occorre innanzitutto attirare la loro
+attenzione portando in classe un sistema che mostri un moto
+oscillatorio. A questo scopo mostro agli studenti un modellino di
+\emph{pendulum wave} (Figura \ref{fig:pendulum_wave}):
+serie di pendoli agganciati a un sostegno in legno mobile.
+Ciascun pendolo è costituito da un filo di stessa lunghezza
+e da un pesetto di uguale massa. 
+Faccio oscillare contemporaneamente tutti i pendoli:
+tutti hanno lo stesso periodo. 
+Modifico la lunghezza dei pendoli sollevando un'estremità del
+sostegno e li faccio oscillare contemporaneamente. I periodi
+dei diversi pendoli si modificano in modo che si formi un'onda
+longitudinale (guardando il sistema dall'alto).
 
-Per ottenere un maggior effetto scenico è possibile
-presentare moti più complessi, sebbene più difficili
-da spiegare: un \emph{wave-pendulum}, un pendolo
-interrotto o due pendoli accoppiati sono solo alcuni
-esempi.
-
-Successivamente si chiede agli studenti di classificare
-questi moti in alcune categorie a piacere, con un criterio di
-similitudine. Si propone di eseguire questo utile esercizio
-individualmente.
+\begin{figure}
+\centering
+  \includegraphics[width=0.32\textwidth]{image3}
+  \includegraphics[width=0.32\textwidth]{image2}
+  \includegraphics[width=0.32\textwidth]{image1}
+  \caption{Modello di pendulum wave}
+  \label{fig:pendulum_wave}
+\end{figure}
 
 \section{Explore}
 In questa fase si chiede agli studenti di dividersi a gruppi di tre
