Fix pronouns in engage section (moto armonico)

--- a/moto_armonico/lezione_moto_armonico.tex
+++ b/moto_armonico/lezione_moto_armonico.tex
@@ -28,12 +28,12 @@ Questo metodo di natura inquiry prevede cinque fasi:
 Per far scoprire ai ragazzi l'esistenza del moto armonico e
 la sua descrizione, occorre innanzitutto attirare la loro
 attenzione portando in classe un sistema che mostri un moto
-oscillatorio. A questo scopo mostro agli studenti un modellino di
-\emph{pendulum wave} (Figura \ref{fig:pendulum_wave}):
+oscillatorio. A questo scopo mostriamo agli studenti un modellino di
+\emph{pendulum wave} (Figura \ref{fig:pendulum_wave}): una
 serie di pendoli agganciati a un sostegno in legno mobile.
 Ciascun pendolo è costituito da un filo di stessa lunghezza
 e da un pesetto di uguale massa. 
-Faccio oscillare contemporaneamente tutti i pendoli:
+Facciamo oscillare contemporaneamente tutti i pendoli:
 tutti hanno lo stesso periodo. 
 Modifico la lunghezza dei pendoli sollevando un'estremità del
 sostegno e li faccio oscillare contemporaneamente. I periodi
