--- a/moto_armonico/lezione_moto_armonico.tex
+++ b/moto_armonico/lezione_moto_armonico.tex
@@ -42,10 +42,10 @@ longitudinale (guardando il sistema dall'alto).
 
 \begin{figure}
 \centering
-  \includegraphics[width=0.32\textwidth]{image3}
-  \includegraphics[width=0.32\textwidth]{image2}
-  \includegraphics[width=0.32\textwidth]{image1}
-  \caption{Modello di pendulum wave}
+  \includegraphics[width=0.32\textwidth]{pendulum_wave3}
+  \includegraphics[width=0.32\textwidth]{pendulum_wave2}
+  \includegraphics[width=0.32\textwidth]{pendulum_wave1}
+  \caption{Modello di pendulum wave.}
   \label{fig:pendulum_wave}
 \end{figure}
 
