Add new explore part (moto armonico)

--- a/moto_armonico/lezione_moto_armonico.tex
+++ b/moto_armonico/lezione_moto_armonico.tex
@@ -50,16 +50,32 @@ longitudinale (guardando il sistema dall'alto).
 \end{figure}
 
 \section{Explore}
-In questa fase si chiede agli studenti di dividersi a gruppi di tre
-o quattro e di eseguire un compito un po' più difficile: scegliere
-3 dei fenomeni presentati nella fase di engage e disegnare i
-grafici della forza a cui sono sogetti i corpi in funzione della
-loro traiettoria. Per facilitare questo compito conviene
-scegliere un sistema di riferimento avente asse curvilineo
-e coincidente con la traiettoria dei moti esaminati e graficare
-la proiezione della forza su tale asse. Si noti che questo
-esercizio non richiede di conoscere la natura delle forze in
-gioco \cite{barbieri2015good}.
+Dopo aver catturato l'attenzione degli studenti col nostro engage, conduciamo i ragazzi all'interno della
+materia offrendo loro altri moti.
+In particolare sottoponiamo la loro attenzione ai seguenti tre esperimenti:
+
+\begin{itemize}
+\item un pendolo che
+oscilla;
+\item un cilindretto che si muove lungo un tracciato parabolico;
+\item una pallina che si muove lungo una traiettoria a V.
+\end{itemize}
+
+Il pendolo del primo esperimento consiste di un nastro alla cui estremità è legato un peso, un
+sassolino il più possibile puntiforme, e che viene fatto oscillare manualmente.
+
+Il secondo, invece, consiste di un cilindro metallico, che messo inizialmente alla estremità di un cuscino
+lombare, avente una sella a forma parabolica, viene lasciato cadere lungo questa conca. Il peso oscilla
+lungo questa regione fino a che, dopo poche oscillazioni, si ferma.
+
+L'ultimo esperimento, infine, consiste di un moto simile al precedentem con la differenza che la traiettoria
+viene realizzata accostando due piani inclinati (costituiti da mattoni e piastrelle), facendo sì che i due
+abbiano come punto di contatto le loro estremità finali, così da formare una sorta di “V”. Il punto
+materiale è una pallina di spugna.
+
+Lasciamo indagare gli studenti circa i fenomeni fisici proposti e chiediamo loro quali siano
+moti armonici. Chiediamo anche di tracciare, scegliendo un opportuno sistema di riferimento, un grafico della forza in
+funzione della posizione, $F_x(x)$\cite{barbieri2015good}.
 
 \section{Explain}
 Nella lezione seguente si può approcciare la fase di explain.
