Fix variables names in extend (moto armonico)

--- a/moto_armonico/lezione_moto_armonico.tex
+++ b/moto_armonico/lezione_moto_armonico.tex
@@ -144,13 +144,13 @@ Un corpo oscilla armonicamente nell'intorno di un punto
 di equiibrio solo se \cite{giliberti2014detecting}:
 
 \begin{itemize}
-\item Il punto di equilibrio $\zeta=0$ è \emph{stabile};
-\item La funzione $F_{\zeta}$ è continua;
-\item La funzione $F_{\zeta}$ è differenziabile;
-\item $\frac{\mathrm{d}F_{\zeta}}{\mathrm{d}\zeta}(0) \neq 0$
+\item Il punto di equilibrio $x=0$ è \emph{stabile};
+\item La funzione $F_{x}$ è continua;
+\item La funzione $F_{x}$ è differenziabile;
+\item $\frac{\mathrm{d}F_{x}}{\mathrm{d}x}(0) \neq 0$
 \end{itemize}
 
-Da queste considerazioni si può dedurre che un moto
+Da queste considerazioni possiamo dedurre che un moto
 è armonico se ha un punto di equilibrio e se appare
 \emph{liscio} e \emph{isocrono}.
 Esiste trucco che permette di verificare l'isocronia
@@ -158,9 +158,8 @@ nel caso di alcuni moti: ascoltare il rumore prodotto
 dal moto e verificare che la sua frequenza non cambia al
 variare dell'ampiezza delle oscillazioni.
 
-In questa lezione si propone di portare gli studenti
-in laboratorio, dove si divideranno a gruppi di tre
-o quattro studenti proveranno a progettare un esperimento
+Portiano dubque gli studenti in laboratorio, dove si divideranno
+a gruppi di tre o quattro e proveranno a progettare un esperimento
 che mostri l'armonicità o l'anarmonicità di un certo moto.
 Gli studenti dovranno avvalersi di strumenti di misura,
 come cronometro e metro, per valutare l'isocronia del
