Change authorship (moto armonico)

--- a/moto_armonico/lezione_moto_armonico.tex
+++ b/moto_armonico/lezione_moto_armonico.tex
@@ -8,7 +8,7 @@
 \graphicspath{ {./images/} }
 
 \title{Lezioni sul Moto Armonico}
-\author{Matteo Savatteri}
+\author{Daniele Meloccchi, Agnese Montanaro, Matteo Savatteri}
 
 \begin{document}
 \maketitle
