Give argument to F function (moto armonico)

--- a/moto_armonico/lezione_moto_armonico.tex
+++ b/moto_armonico/lezione_moto_armonico.tex
@@ -133,7 +133,7 @@ equilibrio (in tutti i nostri esperimenti tale punto è l'origine) il grafico $F
 quello di $a(x)$ a meno di una costante moltiplicativa) è uguale ad una retta di coefficiente angolare negativo:
 
 \begin{equation}
-F_{x}=-kx, \quad k>0
+F_{x}(x)=-kx, \quad x \in U(0),\quad k>0
 \end{equation}
 
 \section{Extend}
