Fix some typos (moto armonico)

--- a/moto_armonico/lezione_moto_armonico.tex
+++ b/moto_armonico/lezione_moto_armonico.tex
@@ -64,8 +64,8 @@ oscilla;
 \item una pallina che si muove lungo una traiettoria a V.
 \end{itemize}
 
-Il pendolo del primo esperimento consiste di un nastro alla cui estremità è legato un peso, un
-sassolino il più possibile puntiforme, e che viene fatto oscillare manualmente.
+Il pendolo del primo esperimento consiste di un nastro alla cui estremità è legato un peso (un
+sassolino il più possibile puntiforme) e che viene fatto oscillare manualmente.
 
 Il secondo, invece, consiste di un cilindro metallico, che messo inizialmente alla estremità di un cuscino
 lombare, avente una sella a forma parabolica, viene lasciato cadere lungo questa conca. Il peso oscilla
@@ -84,7 +84,7 @@ funzione della posizione, $F_x(x)$\cite{barbieri2015good}.
 Nella lezione seguente possiamo approcciare la fase di explain.
 Essa dovrebbe essere svolta sotto la guida dell'insegnante e 
 sulla base dell'esperienza che gli studenti hanno acquisito nelle
-fasi precedenti. E fondamentale che a questo punto gli studenti
+fasi precedenti. \`E fondamentale che a questo punto gli studenti
 condividano le spiegazioni dei fenomeni che essi stessi
 hanno sviluppato \cite{duran20045e}.
 Confrontiamo i grafici $x(t)$ e $a(x)$ ottenuti utilizzando il software di
@@ -144,7 +144,7 @@ sulla base di esse. Una competenza molto utile da acquisire
 semplicemente sull'osservazione del fenomeno.
 
 Un corpo oscilla armonicamente nell'intorno di un punto
-di equiibrio solo se \cite{giliberti2014detecting}:
+di equilibrio solo se \cite{giliberti2014detecting}:
 
 \begin{itemize}
 \item Il punto di equilibrio $x=0$ è \emph{stabile};
@@ -156,14 +156,14 @@ di equiibrio solo se \cite{giliberti2014detecting}:
 Da queste considerazioni possiamo dedurre che un moto
 è armonico se ha un punto di equilibrio e se appare
 \emph{liscio} e \emph{isocrono}.
-Esiste trucco che permette di verificare l'isocronia
+Esiste un trucco che permette di verificare l'isocronia
 nel caso di alcuni moti: ascoltare il rumore prodotto
 dal moto e verificare che la sua frequenza non cambia al
 variare dell'ampiezza delle oscillazioni.
 
-Portiano dubque gli studenti in laboratorio, dove si divideranno
+Portiamo dunque gli studenti in laboratorio, dove si divideranno
 a gruppi di tre o quattro e proveranno a progettare un esperimento
-che mostri l'armonicità o l'anarmonicità di un certo moto.
+che mostri o neghi l'armonicità di un certo moto.
 Gli studenti dovranno avvalersi di strumenti di misura,
 come cronometro e metro, per valutare l'isocronia del
 moto scelto.
