Add system description section (proiettile semplice)

--- a/proiettile/modello_proiettile.tex
+++ b/proiettile/modello_proiettile.tex
@@ -23,6 +23,18 @@ In questo documento presentiamo lo studio del moto di un
 proittile, analizzato con la tecnica dei \emph{giochi di modellamento newtoniani}
 \cite{hestenes1992modeling}.
 
+\section{Il sistema}
+Il sistema che ci apprestiamo a studiare è costituito da una pallina da
+ping-pong che viene spinta e lasciata cadare da una superfice orizzontale
+su di un cuscino (Figura \ref{fig:setup_proiettile}).
+
+\begin{figure}[H]
+\centering
+  \includegraphics[width=0.60\textwidth]{setup_proiettile}
+  \caption{L'apparato sperimentale per studiare il moto di un proiettile.}
+  \label{fig:setup_proiettile}
+\end{figure}
+
 \section{Gli elementi del gioco}
 Il gioco di modellamento richiede prima di tutto la scelta
 dei suoi componenti: tabellone e pedine.
