Fix figure position (proiettile semplice)

--- a/proiettile/modello_proiettile.tex
+++ b/proiettile/modello_proiettile.tex
@@ -28,7 +28,7 @@ Il sistema che ci apprestiamo a studiare è costituito da una pallina da
 ping-pong che viene spinta e lasciata cadare da una superfice orizzontale
 su di un cuscino (Figura \ref{fig:setup_proiettile}).
 
-\begin{figure}[H]
+\begin{figure}
 \centering
   \includegraphics[width=0.60\textwidth]{setup_proiettile}
   \caption{L'apparato sperimentale per studiare il moto di un proiettile.}
