Add game components section (proiettile semplice)

--- a/proiettile/modello_proiettile.tex
+++ b/proiettile/modello_proiettile.tex
@@ -39,7 +39,22 @@ su di un cuscino (Figura \ref{fig:setup_proiettile}).
 Il gioco di modellamento richiede prima di tutto la scelta
 dei suoi componenti: tabellone e pedine.
 
-\subsection{Tabellone} 
+\subsection{Tabellone}
+Il tabellone rappresenta in sistema di riferimento scelto per studiare
+il sistema: nel nostro caso la coppia di assi cartesiani avente
+origine nel punto in cui la pallina da ping-pong si stacca dal
+piano orizzontale. L'asse $x$ è stato scelto parallelo al pavimento
+con verso a destra e l'asse $y$ diretto come la forza gravitazionale
+con verso in alto.
+
+\subsection{Le pedine}
+Le pedine rappresentano i corpi modellati come punti materiali
+presenti nel sistema che stiamo studiando:
+
+\begin{itemize}
+\item La pallina da ping-pong di massa $m$;
+\item Il pianeta Terra di massa $M \gg m$.
+\end{itemize}
 
 \bibliography{bibliografia}{}
 \bibliographystyle{plain}
