--- a/proiettile/modello_proiettile.tex
+++ b/proiettile/modello_proiettile.tex
@@ -30,7 +30,7 @@ su di un cuscino (Figura \ref{fig:setup_proiettile}).
 
 \begin{figure}
 \centering
-  \includegraphics[width=0.60\textwidth]{setup_proiettile}
+  \includegraphics[width=\textwidth]{setup_proiettile}
   \caption{L'apparato sperimentale per studiare il moto di un proiettile.}
   \label{fig:setup_proiettile}
 \end{figure}
