Add goal section (proiettile semplice)

--- a/proiettile/modello_proiettile.tex
+++ b/proiettile/modello_proiettile.tex
@@ -39,7 +39,7 @@ su di un cuscino (Figura \ref{fig:setup_proiettile}).
 Il gioco di modellamento richiede prima di tutto la scelta
 dei suoi componenti: tabellone e pedine.
 
-\subsection{Tabellone}
+\subsection{Il tabellone}
 Il tabellone rappresenta in sistema di riferimento scelto per studiare
 il sistema: nel nostro caso la coppia di assi cartesiani avente
 origine nel punto in cui la pallina da ping-pong si stacca dal
@@ -55,6 +55,13 @@ presenti nel sistema che stiamo studiando:
 \item La pallina da ping-pong di massa $m$;
 \item Il pianeta Terra di massa $M \gg m$.
 \end{itemize}
+
+\section{Vincere il gioco}
+Per vincere il gioco, dobbiamo produrre un modello valido
+der il moto del proiettile. Per valutare la validità
+del modello, ci proponiamo di prevedere la velocità iniziale
+del proiettile dalla conoscenza della sua altezza iniziale
+$h$ e della gittata $d$ raggiunta.
 
 \bibliography{bibliografia}{}
 \bibliographystyle{plain}
