Add moveset section (proiettile semplice)

--- a/proiettile/modello_proiettile.tex
+++ b/proiettile/modello_proiettile.tex
@@ -63,6 +63,20 @@ del modello, ci proponiamo di prevedere la velocità iniziale
 del proiettile dalla conoscenza della sua altezza iniziale
 $h$ e della gittata $d$ raggiunta.
 
+\section{Le mosse}
+Possiamo compiere un certo numero di mosse, scelte tra il set
+delle mosse valide, quello della dinamica newtoniana, per
+condurre un gioco:
+
+\begin{itemize}
+\item Assegnare alle particelle posizioni e velocità iniziali nel sistema di riferimento scelto;
+\item o interazioni consistenti con le leggi di interazione generali;
+\item calcolare le traiettorie dalle leggi generali della dinamica;
+\item validare il modello confrontandolo con il mondo fisico.
+\end{itemize}
+
+Tutte le precedenti sono mosse valide.
+
 \bibliography{bibliografia}{}
 \bibliographystyle{plain}
 
