Change physical system (new point mass) (proiettile piano inclinato)

--- a/proiettile_piano_inclinato/modello_proiettile_piano_inclinato.tex
+++ b/proiettile_piano_inclinato/modello_proiettile_piano_inclinato.tex
@@ -31,26 +31,15 @@ un piano inclinato su di una superficie, che ci permetta di individuare il
 punto esatto della caduta.  La velocità iniziale del proiettile è raggiunta e
 regolata mediante il piano inclinato, sul quale il corpo in questione viene fatto scivolare
 o rotolare. Questo espediente consente un maggior controllo sul momento iniziale del
-proiettile. Abbiamo condotto l'esperimento in due modalità differenti: nella prima il corpo
-studiato è una macchinina e la superficie tracciante è costituita da uno strato di
-carta carbone (Figura \ref{fig:setup_proiettile_1}), nella seconda invece abbiamo utilizzano
-un cilindretto forato e un foglio di alluminio, rispettivamente
-(Figura \ref{fig:setup_proiettile_2}).
+proiettile. Il corpo che abbiamo studiato è una scatola di latta cosparsa di inchiostro
+e la superficie tracciante è costituita da uno strato di carta (Figura \ref{fig:setup_proiettile_3}).
 
 \begin{figure}
 \centering
-  \includegraphics[width=\textwidth]{setup_proiettile_piano_inclinato_1}
-  \caption{Il primo apparato sperimentale per studiare il moto di un proiettile.}
-  \label{fig:setup_proiettile_1}
+  \includegraphics[width=\textwidth]{setup_proiettile_piano_inclinato_3}
+  \caption{L'apparato sperimentale per studiare il moto di un proiettile.}
+  \label{fig:setup_proiettile_3}
 \end{figure}
-
-\begin{figure}
-\centering
-  \includegraphics[width=\textwidth]{setup_proiettile_piano_inclinato_2}
-  \caption{Il secondo apparato sperimentale per studiare il moto di un proiettile.}
-  \label{fig:setup_proiettile_2}
-\end{figure}
-
 
 \section{Gli elementi del gioco}
 Il gioco di modellamento richiede prima di tutto la scelta
@@ -69,7 +58,7 @@ Le pedine rappresentano i corpi modellati come punti materiali
 presenti nel sistema che stiamo studiando:
 
 \begin{itemize}
-\item La macchinina o il cilindretto cavo, di massa $m$;
+\item La scatola di latta, di massa $m$;
 \item Il pianeta Terra di massa $M \gg m$.
 \end{itemize}
 
