Add expression for velocities from inclined plane (proiettile piano inclinato)

--- a/proiettile_piano_inclinato/modello_proiettile_piano_inclinato.tex
+++ b/proiettile_piano_inclinato/modello_proiettile_piano_inclinato.tex
@@ -196,7 +196,14 @@ a_x(t) &= 0 \Rightarrow v_x(t) = v_{x,0} \Rightarrow x(t) = v_{x,0}t \\
 a_y(t) &= -g \Rightarrow v_y(t) = - g t \Rightarrow y(t) + v_{y,0} = - \frac{1}{2} g t^2 + v_{y,0} t  
 \end{align}
 
-Dalla dinamica del piano inclinato possiamo ricavare le incognite $v_{x,0}$ e $v_{y,0}$.
+Misurando la gittata del proiettile $G$ e utilizzando le equazioni del
+moto è possibile ricavare le velocità iniziali incognite:
+
+\begin{align}
+v_{x,0} = \sqrt{\frac{gG^2}{2(h - G\tan \alpha)}} 
+\end{align}
+
+Queste posono essere  confrontate con quelle ottenute dalla dinamica del piano inclinato.
 
 Ricaviamo le leggi orarie della velocità lungo il piano inclinato nel sistema di riferimento
 avente origine nel punto in cui si trova il proiettile quando inizia la la sua corsa, asse delle
