Include packages for graphics (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -1,8 +1,13 @@
 \documentclass{report} \usepackage[T1]{fontenc} \usepackage[italian]{babel}
-\usepackage{hyperref}
 \usepackage{color}
 \usepackage[type={CC},modifier={by-sa},version={4.0},]{doclicense}
 \usepackage{cite}
+
+\usepackage{graphicx}
+\graphicspath{ {./media/images/} }
+\usepackage{float}
+
+\usepackage{hyperref}
 
 \title{Title} \author{Daniele Melocchi\\Agnese Montanaro\\Matteo
 Savatteri}
