Add some details in introduction (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -22,7 +22,8 @@ Copyright Daniele Melocchi, Agnese Montanaro, Matteo Savatteri -
 \tableofcontents
 
 \chapter{Introduzione}
-Questo documento presenta un ciclo di lezioni
+Questo documento presenta un ciclo di lezioni svolte nella modalità
+della didattica a distanza (\emph{DAD}) e
 indirizzate ad una classe 1\textsuperscript{a} Liceo Scientifico,
 riguardanti le basi della cinematica, il moto rettilineo uniforme
 e uniformemente accelerato.
@@ -32,7 +33,7 @@ sono affrontati i seguenti argomenti, ordinati secondo un criterio
 di complessità crescente, partendo da un approccio completamente
 qualitativo, per passare ad uno via via più quantitativo:
 \begin{enumerate}
-\item Posizioni, distanze, istanti e intervalli temporali, leggi orarie.
+\item Posizioni, istanti, distanze e intervalli temporali, leggi orarie.
 \item Velocità media, velocità istantanea, moto rettilineo uniforme.
 \item Accelerazione media, accelerazione istantanea, moto uniformemente
       accelerato.
