Add more propedeutics (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -50,13 +50,13 @@ Al fine della buona riuscita di questo percorso, è necessario che gli
 studenti coinvolti abbiano affrontato e consolidato la comprensione
 dei seguenti argomenti:
 \begin{itemize}
-\item Operazioni algebriche elementari (es. somma, prodotto, frazioni
-      e potenze).
+\item Operazioni algebriche elementari (es. frazioni e potenze).
 \item Equazioni di primo grado.
 \item Rappresentazioni di numeri su un asse ordinato.
 \item Rappresentazione di coppie di numeri (punti) su un diagramma
       cartesiano.
-\item \colorbox{red}{altro?}
+\item Conoscenza di unità di misura di grandezze fondamentali.
+      (es. lunghezza, tempo)
 \end{itemize}
 
 
